# AmazonSyncForYNAB

./: Dockerfile  README.md  pyproject.toml  run.sh
src/: main.py
src/amazon_client/: amazon_selenium_client.py
