[project]
name = "amazonsyncforynab"
version = "0.1.0"
description = ""
authors = [{ name = "Zachary J. Rollyson", email = "me@zjr.io" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests (>=2.32.3,<3.0.0)",
  "bs4 (>=0.0.2,<0.0.3)",
  "html5lib (>=1.1,<2.0)",
  "selenium (>=4.30.0,<5.0.0)",
  "pyotp (>=2.9.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
